# vlc-build

./: Makefile.in  build.sh  config.h.in  configure
compat/: Makefile.in
custom_plugins/: CMakeLists.txt
custom_plugins/src/: config.h
doc/: Makefile.in
install/: vlc-vars.sh
lib/: Makefile.in
m4/: Makefile.in
modules/: Makefile.in
modules/access/: dvdread.c
modules/codec/webvtt/: CSSGrammar.c  CSSGrammar.h
modules/demux/adaptive/playlist/: SegmentTemplate.cpp  SegmentTemplate.h
modules/hw/mmal/: Makefile.in
modules/text_renderer/freetype/: text_layout.c
po/: ach.gmo  ach.po  af.gmo  af.po  am.gmo  am.po  am_ET.gmo  am_ET.po  an.gmo  an.po  ar.gmo  ar.po  as_IN.gmo  as_IN.po  ast.gmo  ast.po  be.gmo  be.po  bg.gmo  bg.po  bn.gmo  bn.po  bn_IN.gmo  bn_IN.po  br.gmo  br.po  brx.gmo  brx.po  bs.gmo  bs.po  ca.gmo  ca.po  ca@valencia.gmo  ca@valencia.po  cgg.gmo  cgg.po  co.gmo  co.po  cs.gmo  cs.po  (+153 more)
share/: Makefile.in
src/: Makefile.in  revision.c  revision.txt
src/input/: input.c
src/network/: udp.c
test/: Makefile.in
